--- a/week2/all.css
+++ b/week2/all.css
@@ -52,9 +52,7 @@ img {
 .btn {
     border-radius: 2rem;
     padding: 12px 24px;
-    &:hover {
-        background-color: #00FFA3;
-    }
+    transition: 0.3s;
 }
 .btn img {
     margin-left: 0.25rem;
@@ -62,10 +60,21 @@ img {
 .btn-light {
     color: #000;
     background-color: #FFF;
+    &:hover {
+        background-color: #00FFA3;
+        box-shadow: 0 0 0 2px #00FFA3;
+        border-radius: 0;
+    }
 }
 .btn-dark {
     color: #FFF;
     background-color: #000;
+    &:hover {
+        color: #00FFA3;
+        box-shadow: 0 0 0 2px #000;
+
+        border-radius: 0;
+    }
 }
 
 
@@ -95,6 +104,7 @@ img {
     padding: 1rem;
     outline: 1px solid #e3e3e3;
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.8);
+    height: 100%;
 }
 .social-link img {
     border-radius: 40px;
@@ -134,6 +144,9 @@ img {
     align-items: center;
 }
 
+.gap-134 {
+    gap: 8.375rem;
+}
 .gap-28 {
     gap: 1.75rem;
 }
