--- a/week3/layout/footer.ejs
+++ b/week3/layout/footer.ejs
@@ -1,1 +1,42 @@
-<footer class="footer">我是 footer</footer>
+<footer class="footer">
+    <div class="container">
+        <div class="footer-content d-flex jc-sb ai-fs">
+            <div class="footer-info d-flex fd-column ai-fs">
+                <ul class="nav d-flex ai-c">
+                    <li class="nav-item"><a href="#">首頁</a></li>
+                    <li class="nav-item"><a href="#">系列鏡框</a></li>
+                    <li class="nav-item"><a href="#">門市據點</a></li>
+                    <li class="nav-item"><a href="#">部落格</a></li>
+                    <li class="nav-item"><a href="#">常見問題</a></li>
+                </ul>
+                <div class="footer-contact d-flex fd-column ai-fs">
+                    <a href="tel:+0800-000-000" class="d-flex ai-c pb-2">
+                        <span class="material-symbols-outlined">
+                            call
+                            </span>
+                        <span>0800-000-000</span>
+                    </a>
+                    <a href="mailto:glasses@business.com" class="d-flex ai-c">
+                        <span class="material-symbols-outlined">mail</span>
+                        <span>glasses@business.com</span>
+                    </a>
+                </div>
+            </div>
+            <div class="social-link d-flex ai-c">
+                <a href="#"><img src="../assets/images/ic-social-fb.png" alt="facebook icon"></a>
+                <a href="#"><img src="../assets/images/ic_social_ig.png" alt="instagram icon"></a>
+                <a href="#"><img src="../assets/images/ic_social_line.png" alt="line icon"></a>
+            </div>
+        </div>
+        <div class="footer-policy d-flex jc-sb ai-c">
+            <span>Copyright © 2020 Glasses.All rights reserved.</span>
+
+            <div class="terms d-flex jc-fe ai-c ml-auto">
+                <a href="#">隱私權政策</a>
+                <a href="#">服務條款</a>
+            </div>
+        </div>
+        
+    </div>
+</footer>
+
