--- a/week3/layout/header.ejs
+++ b/week3/layout/header.ejs
@@ -1,4 +1,14 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<header class="header py-4">
+    <div class="container d-flex jc-sb ai-c">
+        
+        <a href="../pages/index.html" class="logo mr-auto pt-4">
+            <img src="../assets/images/logo-white.png" alt="brand logo">
+        </a>
+        <ul class="nav d-flex">
+            <li class="nav-item"><a href="#">系列鏡框</a></li>
+            <li class="nav-item"><a href="#">門市據點</a></li>
+            <li class="nav-item"><a href="#">部落格</a></li>
+            <li class="nav-item"><a href="#">常見問題</a></li>
+        </ul>
+    </div>
+</header>
