--- a/week3/assets/scss/helper/_variables.scss
+++ b/week3/assets/scss/helper/_variables.scss
@@ -1,5 +1,6 @@
-$primary-color:#AA0601;
-$secondary-color:#650300;
+$primary-color: #AA0601;
+$secondary-color: #650300;
+$soft-pedal-color: #707070;
 $bg-light: #fbf2f2;
 $text-color-light: #FFF;
 
@@ -23,3 +24,10 @@ $font-size-5: $font-size-1 * 2.25;
 $font-size-6: $font-size-1 * 3;
 //64
 $font-size-7: $font-size-1 * 4;
+
+
+//bold
+$fw-regular: 400;
+$fw-medium: 500;
+$fw-bold: 700;
+$fw-black: 900;
