--- a/week3/layout/header.ejs
+++ b/week3/layout/header.ejs
@@ -1,7 +1,7 @@
 <header class="header py-4">
     <div class="container d-flex jc-sb ai-c">
         
-        <a href="../pages/index.html" class="logo mr-auto pt-4">
+        <a href="../pages/index.html" class="logo mr-auto">
             <img src="../assets/images/logo-white.png" alt="brand logo">
         </a>
         <ul class="nav d-flex">
