--- a/week3/layout/header.ejs
+++ b/week3/layout/header.ejs
@@ -1,12 +1,12 @@
 <header class="header py-4">
-    <div class="container d-flex jc-sb ai-c">
+    <div class="container padding-wrapper d-flex jc-sb ai-c">
         
         <a href="../pages/index.html" class="logo mr-auto">
             <img src="../assets/images/logo-white.png" alt="brand logo">
         </a>
         <ul class="nav d-flex">
-            <li class="nav-item"><a href="#">系列鏡框</a></li>
-            <li class="nav-item"><a href="#">門市據點</a></li>
+            <li class="nav-item"><a href="../pages/product_optical.html">系列鏡框</a></li>
+            <li class="nav-item"><a href="../pages/stores.html">門市據點</a></li>
             <li class="nav-item"><a href="#">部落格</a></li>
             <li class="nav-item"><a href="#">常見問題</a></li>
         </ul>
