--- a/week3/assets/scss/helper/_variables.scss
+++ b/week3/assets/scss/helper/_variables.scss
@@ -3,6 +3,8 @@ $secondary-color: #650300;
 $soft-pedal-color: #707070;
 $bg-light: #fbf2f2;
 $text-color-light: #FFF;
+$pagination-color: #555555;
+
 
 $gap: 24px;
 $columns-num: 12;
@@ -20,10 +22,12 @@ $font-size-3: $font-size-1 * 1.5;
 $font-size-4: $font-size-1 * 2;
 //36
 $font-size-5: $font-size-1 * 2.25;
+//42
+$font-size-6: $font-size-1 * 2.625;
 //48
-$font-size-6: $font-size-1 * 3;
+$font-size-7: $font-size-1 * 3;
 //64
-$font-size-7: $font-size-1 * 4;
+$font-size-8: $font-size-1 * 4;
 
 
 //bold
