--- a/week3/assets/scss/layout/_header.scss
+++ b/week3/assets/scss/layout/_header.scss
@@ -5,7 +5,7 @@
       padding-bottom: 0;
     }
 
-    .container {
+    .padding-wrapper {
     @include mobile-larger {
       flex-direction: column;
       align-items: flex-start;
