--- a/week3/assets/scss/pages/_index.scss
+++ b/week3/assets/scss/pages/_index.scss
@@ -1,6 +1,6 @@
-.main-index {
+.index {
 
-    .container{
+    .padding-wrapper{
         padding-top: 80px;
         padding-bottom: 80px;
         @include mobile {
@@ -9,7 +9,7 @@
         }
     }
     h2 {
-        font-size: $font-size-6;
+        font-size: $font-size-7;
         color: $secondary-color;
         font-weight: $fw-bold;
         margin-bottom: 48px;
@@ -60,11 +60,11 @@
             }
         }
         h1 {
-            font-size: $font-size-7;
+            font-size: $font-size-8;
             font-weight: $fw-bold;
             margin-bottom: 4px;
             @include mobile-larger {
-                font-size: $font-size-6;
+                font-size: $font-size-7;
             }
             @include mobile {
                 font-size: $font-size-3;
@@ -101,7 +101,7 @@
             width: 100%;
         }
 
-        .feature-content {
+        .feature-item {
             height: 100%;
 
             img {
@@ -150,11 +150,11 @@
             opacity: 90%;
         }
     }
-    &-content {
+    &-item {
         width: 100%;
         h3 {
             color: $primary-color;
-            font-size: $font-size-6;
+            font-size: $font-size-7;
             font-weight: $fw-black;
             font-style: italic;
         }
@@ -201,7 +201,7 @@
         }
     }
 
-    &-content {
+    &-item {
         .brand-img-doubleA {
             background-size: cover;
             background-position: center;
@@ -226,7 +226,7 @@
 
         h3 {
             color: $primary-color;
-            font-size: $font-size-6;
+            font-size: $font-size-7;
             font-weight: $fw-black;
             font-style: italic;
             padding: 8px 0;
@@ -259,14 +259,14 @@
         border-radius: 4px;
         box-shadow: 0px 2px 6px #00000029;
 
-        .recommend-content {
+        .recommend-item {
             height: 100%;
             
-            .recommend-text {
+            .recommend-content {
                 padding: 16px;
             height: 100%;
             }
-            span {
+            h4 {
                 font-weight: $fw-medium;
                 margin-bottom: 8px;
             }
