--- a/week3/layout/footer.ejs
+++ b/week3/layout/footer.ejs
@@ -1,11 +1,11 @@
 <footer class="footer">
-    <div class="container">
+    <div class="container padding-wrapper">
         <div class="footer-content d-flex jc-sb ai-fs">
             <div class="footer-info d-flex fd-column ai-fs">
                 <ul class="nav d-flex ai-c">
                     <li class="nav-item"><a href="#">首頁</a></li>
-                    <li class="nav-item"><a href="#">系列鏡框</a></li>
-                    <li class="nav-item"><a href="#">門市據點</a></li>
+                    <li class="nav-item"><a href="../pages/product_optical.html">系列鏡框</a></li>
+                    <li class="nav-item"><a href="../pages/stores.html">門市據點</a></li>
                     <li class="nav-item"><a href="#">部落格</a></li>
                     <li class="nav-item"><a href="#">常見問題</a></li>
                 </ul>
