--- a/week3/assets/scss/components/_pagination.scss
+++ b/week3/assets/scss/components/_pagination.scss
@@ -25,7 +25,7 @@
         border-bottom: 1px solid $pagination-color;
         
         padding: 12px 16px;
-        font-size: 1.125rem;
+        font-size: $font-size-2;
         @include mobile {
             padding: 12px 15px;
             font-size: $font-size-1;
@@ -36,7 +36,7 @@
     }
     .previous, .next {
         padding: 11px 12px;
-            font-size: 1.1875rem;
+            font-size: $font-size-3;
             @include mobile {
                 padding: 11px 13.5px;
                 font-size: $font-size-1;
