--- a/week3/assets/scss/helper/_variables.scss
+++ b/week3/assets/scss/helper/_variables.scss
@@ -14,20 +14,24 @@ $max: 100;
 $font-size-1: 1rem;
 //14
 $font-size-0: $font-size-1 * 0.875;
+//18
+$font-size-2: $font-size-1 * 1.125;
+//19
+$font-size-3: $font-size-1 * 1.1875;
 //20
-$font-size-2: $font-size-1 * 1.25;
+$font-size-4: $font-size-1 * 1.25;
 //24
-$font-size-3: $font-size-1 * 1.5;
+$font-size-5: $font-size-1 * 1.5;
 //32
-$font-size-4: $font-size-1 * 2;
+$font-size-6: $font-size-1 * 2;
 //36
-$font-size-5: $font-size-1 * 2.25;
+$font-size-7: $font-size-1 * 2.25;
 //42
-$font-size-6: $font-size-1 * 2.625;
+$font-size-8: $font-size-1 * 2.625;
 //48
-$font-size-7: $font-size-1 * 3;
+$font-size-9: $font-size-1 * 3;
 //64
-$font-size-8: $font-size-1 * 4;
+$font-size-10: $font-size-1 * 4;
 
 
 //bold
