--- a/week3/assets/scss/helper/_variables.scss
+++ b/week3/assets/scss/helper/_variables.scss
@@ -4,6 +4,7 @@ $soft-pedal-color: #707070;
 $bg-light: #fbf2f2;
 $text-color-light: #FFF;
 $pagination-color: #555555;
+$form-focus-shadow: rgba(170, 6, 1, 0.3);
 
 
 $gap: 24px;
