--- a/week3/layout/footer.ejs
+++ b/week3/layout/footer.ejs
@@ -3,11 +3,11 @@
         <div class="footer-content d-flex jc-sb ai-fs">
             <div class="footer-info d-flex fd-column ai-fs">
                 <ul class="nav d-flex ai-c">
-                    <li class="nav-item"><a href="#">首頁</a></li>
+                    <li class="nav-item"><a href="../pages/index.html">首頁</a></li>
                     <li class="nav-item"><a href="../pages/product_optical.html">系列鏡框</a></li>
                     <li class="nav-item"><a href="../pages/stores.html">門市據點</a></li>
-                    <li class="nav-item"><a href="#">部落格</a></li>
-                    <li class="nav-item"><a href="#">常見問題</a></li>
+                    <li class="nav-item"><a href="../pages/blog.html">部落格</a></li>
+                    <li class="nav-item"><a href="../pages/faq.html">常見問題</a></li>
                 </ul>
                 <div class="footer-contact d-flex fd-column ai-fs">
                     <a href="tel:+0800-000-000" class="d-flex ai-c pb-2">
