--- a/week3/assets/scss/all.scss
+++ b/week3/assets/scss/all.scss
@@ -19,14 +19,20 @@
 @import './layout/grid';
 @import './layout/page_title';
 @import './layout/product_title';
+@import './layout/store_individual';
+
 
 
 
 // components
 @import './components/breadcrumb';
-@import './components/product_cardlist';
+@import './components/product_card_list';
 @import './components/pagination';
 @import './components/store_area_selector';
+@import './components/store_card_list';
+@import './components/blog_article_list';
+@import './components/nav_sub';
+
 
 
 
@@ -36,7 +42,7 @@
 @import './pages/index';
 @import './pages/product_optical';
 @import './pages/product_sunglasses';
-@import './pages/stores';
+@import './pages/faq';
 
 
 
