--- a/week3/assets/scss/components/_breadcrumb.scss
+++ b/week3/assets/scss/components/_breadcrumb.scss
@@ -39,7 +39,7 @@
                     height: 56px;
                 }
                 z-index: 1;
-                border-bottom: 0px solid transparent;
+                border-bottom: 8px solid transparent;
             }
     
             // hover用的bar
@@ -60,8 +60,7 @@
                 border-bottom: 8px solid transparent;
             }
     
-            // 兩個bar都hover時作用
-            &:hover::before , &:hover::after{
+            &:hover::after{
                 border-bottom: 8px solid $primary-color;   
             }
         }
