--- a/week3/assets/scss/layout/_page_title.scss
+++ b/week3/assets/scss/layout/_page_title.scss
@@ -3,6 +3,7 @@
     margin-bottom: 32px;
     font-size: $font-size-9;
     font-weight: $fw-bold;
+    padding-left: 16px;
     border-left: 8px solid #9F1213; 
     
     @include pad {
