--- a/week3/assets/scss/components/_blog_post_list.scss
+++ b/week3/assets/scss/components/_blog_post_list.scss
@@ -1,5 +1,5 @@
-.article {
-    .article-container {
+.blog-post {
+    .blog-post-container {
         margin-bottom: 124px;
         @include pad {
             margin-bottom: 80px;
