--- a/week3/assets/scss/components/_nav_sub.scss
+++ b/week3/assets/scss/components/_nav_sub.scss
@@ -9,6 +9,9 @@
             font-size: $font-size-4;
             font-weight: $fw-bold;
             padding: 13px 0px;
+            &:hover {
+                opacity: 80%;
+            }
         }
     }
     @include mobile-larger {
