--- a/week3/layout/nav_sub.ejs
+++ b/week3/layout/nav_sub.ejs
@@ -2,7 +2,7 @@
     <div class="container padding-wrapper">
         <ul class="nav-sub-list  d-flex jc-sb ai-c">
             <li class="nav-sub-item"><a href="#">最新消息</a></li>
-            <li class="nav-sub-item"><a href="../pages/blog_pg1.html">特別企劃</a></li>
+            <li class="nav-sub-item"><a href="blog_pg1.html">特別企劃</a></li>
             <li class="nav-sub-item"><a href="#">新品上市</a></li>
             <li class="nav-sub-item"><a href="#">鏡框小知識</a></li>
             <li class="blog-searcher ml-auto"><a href="#"><span class="material-symbols-outlined">search</span></a></li>
