--- a/week3/layout/header.ejs
+++ b/week3/layout/header.ejs
@@ -1,14 +1,14 @@
 <header class="header py-4">
     <div class="container padding-wrapper d-flex jc-sb ai-c">
         
-        <a href="../pages/index.html" class="logo mr-auto">
+        <a href="index.html" class="logo mr-auto">
             <img src="../assets/images/logo-white.png" alt="brand logo">
         </a>
         <ul class="nav d-flex">
-            <li class="nav-item"><a href="../pages/product_optical.html">系列鏡框</a></li>
-            <li class="nav-item"><a href="../pages/stores.html">門市據點</a></li>
-            <li class="nav-item"><a href="../pages/blog.html">部落格</a></li>
-            <li class="nav-item"><a href="../pages/faq.html">常見問題</a></li>
+            <li class="nav-item"><a href="product_optical.html">系列鏡框</a></li>
+            <li class="nav-item"><a href="stores.html">門市據點</a></li>
+            <li class="nav-item"><a href="blog.html">部落格</a></li>
+            <li class="nav-item"><a href="faq.html">常見問題</a></li>
         </ul>
     </div>
 </header>
