--- a/week3/assets/scss/all.scss
+++ b/week3/assets/scss/all.scss
@@ -20,9 +20,7 @@
 @import './layout/page_title';
 @import './layout/product_title';
 @import './layout/store_individual';
-
-
-
+@import './layout/nav_sub';
 
 
 // components
@@ -32,7 +30,6 @@
 @import './components/store_area_selector';
 @import './components/store_card_list';
 @import './components/blog_post_list';
-@import './components/nav_sub';
 
 
 
