--- a/week3/assets/scss/pages/_product_optical.scss
+++ b/week3/assets/scss/pages/_product_optical.scss
@@ -51,7 +51,7 @@ ul:hover .optical a::before{
 }
 
 .product-img {
-    @for $i from 1 through $columns-num {
+    @for $i from 1 through 100 {
         &#{$i} {
             background-image: url("../images/product-" + #{$i} + ".png");
         }
