--- a/week3/assets/scss/pages/_product_sunglasses.scss
+++ b/week3/assets/scss/pages/_product_sunglasses.scss
@@ -52,7 +52,7 @@ ul:hover .sunglasses a::before {
 }
 
 .product-img {
-    @for $i from 1 through $columns-num {
+    @for $i from 1 through 100 {
         &#{$i} {
             background-image: url("../images/product-" + #{$i} + ".png");
         }
