--- a/week3/layout/header.ejs
+++ b/week3/layout/header.ejs
@@ -2,7 +2,7 @@
     <div class="container padding-wrapper d-flex jc-sb ai-c">
         
         <a href="index.html" class="logo mr-auto">
-            <img src="../assets/images/logo-white.png" alt="brand logo">
+            <img src="../assets/images/logo-white.png" alt="眼鏡官網">
         </a>
         <ul class="nav d-flex">
             <li class="nav-item"><a href="product_optical.html">系列鏡框</a></li>
